Update Dockerfile and makefile